tests/baselines/reference/sourceMapValidationClass(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
sourceMapValidationClass.ts(7,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== sourceMapValidationClass.ts (1 errors) ====
    class Greeter {
        constructor(public greeting: string, ...b: string[]) {
        }
        greet() {
            return "<h1>" + this.greeting + "</h1>";
        }
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        private x1: number = 10;
        private fn() {
            return this.greeting;
        }
        get greetings() {
            return this.greeting;
        }
        set greetings(greetings: string) {
            this.greeting = greetings;
        }
    }